--- a/index.html
+++ b/index.html
@@ -74,39 +74,101 @@
                 </div>
             </div>
 
-   
 
-    </header>
 
-    <div class="container-lg pt-5 ">
+        </header>
 
-    </div>
+        <div class="container-lg pt-5 ">
 
-    <div class="container-fluid">
-        <div class="row g-0 row-cols-lg-3 m-3">
-            <div class="col-lg bg-info">
-                <div class="d-flex flex-column bg-light  align-items-center" style="width: 90%;">
-                    <h1 class="display-6 align-self-start mt-2">bootstrap چیست</h1>
-                    <img src="img/Banner3.jpg" class="img-thumbnail" alt="" style="width: 70%; height: 50%;">
-                    <div class="d-flex"> a</div>
+        </div>
 
+        <div class="container-fluid">
+            <div class="row g-0 row-cols-lg-4 row-cols-md-3 m-3 justify-content-center">
+                <div class="col-lg mx-1 my-1  border border-info border-2 rounded-end rounded-3">
+                    <div class="d-flex flex-column bg-light  align-items-center" style="width: 90%;margin: auto;">
+                        <h1 class="display-6 align-self-start mt-2">bootstrap چیست</h1>
+                        <img src="img/Banner3.jpg" class="img-thumbnail" alt="" style="width: 70%; height: 50%;">
+                        <p> در این مقاله درباره مزایا و معایب استفاده از bootstrap قراره بگیم ...</p>
+
+                        <div class="d-flex bg-secondary m-1  justify-content-between" style="width: 100%;">
+                            <div class="p-2 m-1 bg-primary text-bg-primary"> مشاهده پست</div>
+                            <div class="p-2 m-1 bg-warning"> مدت زمان مطالعه: 5 دقیقه</div>
+                        </div>
+
+                    </div>
                 </div>
+
+                <div class="col-lg mx-1 my-1 border border-info border-2 rounded-end rounded-3">
+                    <div class="d-flex flex-column bg-light  align-items-center" style="width: 90%;margin: auto;">
+                        <h1 class="display-6 align-self-start mt-2">bootstrap چیست</h1>
+                        <img src="img/Banner3.jpg" class="img-thumbnail" alt="" style="width: 70%; height: 50%;">
+                        <p> در این مقاله درباره مزایا و معایب استفاده از bootstrap قراره بگیم ...</p>
+
+                        <div class="d-flex bg-secondary m-1  justify-content-between" style="width: 100%;">
+                            <div class="p-2 m-1 bg-primary text-bg-primary"> مشاهده پست</div>
+                            <div class="p-2 m-1 bg-warning"> مدت زمان مطالعه: 5 دقیقه</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg mx-1 my-1 border border-info border-2 rounded-end rounded-3">
+                    <div class="d-flex flex-column bg-light  align-items-center" style="width: 90%;margin: auto;">
+                        <h1 class="display-6 align-self-start mt-2">bootstrap چیست</h1>
+                        <img src="img/Banner3.jpg" class="img-thumbnail" alt="" style="width: 70%; height: 50%;">
+                        <p> در این مقاله درباره مزایا و معایب استفاده از bootstrap قراره بگیم ...</p>
+
+                        <div class="d-flex bg-secondary m-1  justify-content-between" style="width: 100%;">
+                            <div class="p-2 m-1 bg-primary text-bg-primary"> مشاهده پست</div>
+                            <div class="p-2 m-1 bg-warning"> مدت زمان مطالعه: 5 دقیقه</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg mx-1 my-1 border border-info border-2 rounded-end rounded-3">
+                    <div class="d-flex flex-column bg-light  align-items-center" style="width: 90%;margin: auto;">
+                        <h1 class="display-6 align-self-start mt-2">bootstrap چیست</h1>
+                        <img src="img/Banner3.jpg" class="img-thumbnail" alt="" style="width: 70%; height: 50%;">
+                        <p> در این مقاله درباره مزایا و معایب استفاده از bootstrap قراره بگیم ...</p>
+
+                        <div class="d-flex bg-secondary m-1  justify-content-between" style="width: 100%;">
+                            <div class="p-2 m-1 bg-primary text-bg-primary"> مشاهده پست</div>
+                            <div class="p-2 m-1 bg-warning"> مدت زمان مطالعه: 5 دقیقه</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg mx-1 my-1 border border-info border-2 rounded-end rounded-3">
+                    <div class="d-flex flex-column bg-light  align-items-center" style="width: 90%;margin: auto;">
+                        <h1 class="display-6 align-self-start mt-2">bootstrap چیست</h1>
+                        <img src="img/Banner3.jpg" class="img-thumbnail" alt="" style="width: 70%; height: 50%;">
+                        <p> در این مقاله درباره مزایا و معایب استفاده از bootstrap قراره بگیم ...</p>
+
+                        <div class="d-flex bg-secondary m-1  justify-content-between" style="width: 100%;">
+                            <div class="p-2 m-1 bg-primary text-bg-primary"> مشاهده پست</div>
+                            <div class="p-2 m-1 bg-warning"> مدت زمان مطالعه: 5 دقیقه</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg mx-1 my-1 border border-info border-2 rounded-end rounded-3"> 
+                    <div class="d-flex flex-column bg-light  align-items-center" style="width: 90%;margin: auto;">
+                        <h1 class="display-6 align-self-start mt-2">bootstrap چیست</h1>
+                        <img src="img/Banner3.jpg" class="img-thumbnail" alt="" style="width: 70%; height: 50%;">
+                        <p> در این مقاله درباره مزایا و معایب استفاده از bootstrap قراره بگیم ...</p>
+
+                        <div class="d-flex bg-secondary m-1  justify-content-between" style="width: 100%;">
+                            <div class="p-2 m-1 bg-primary text-bg-primary"> مشاهده پست</div>
+                            <div class="p-2 m-1 bg-warning"> مدت زمان مطالعه: 5 دقیقه</div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
-            <div class="col-lg bg-dark">b</div>
-            <div class="col-lg bg-info">cc</div>
-            <div class="col-lg bg-dark">cc</div>
-            <div class="col-lg bg-info">a</div>
-            <div class="col-lg bg-dark">b</div>
+
+            <div class="d-flex p-3 bg-secondary text-white flex-column flex-lg-row flex-nowrap">
+                <div class="p-2 bg-info flex-fill">Flex item 1</div>
+                <div class="p-2 bg-warning">Flex item 2</div>
+                <div class="p-2 bg-primary">Flex item 3</div>
+            </div>
 
         </div>
-
-        <div class="d-flex p-3 bg-secondary text-white flex-column flex-lg-row flex-nowrap">
-            <div class="p-2 bg-info flex-fill">Flex item 1</div>
-            <div class="p-2 bg-warning">Flex item 2</div>
-            <div class="p-2 bg-primary">Flex item 3</div>
-        </div>
-
-    </div>
 
 
     </div>
