Add our team section with used to card

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 
         <div class="container-fluid">
             <div class="row g-0 row-cols-lg-4 row-cols-md-3 m-3 justify-content-center">
+
                 <div class="col-lg mx-1 my-1  border border-info border-2 rounded-end rounded-3">
                     <div class="d-flex flex-column bg-light  align-items-center" style="width: 90%;margin: auto;">
                         <h1 class="display-6 align-self-start mt-2">bootstrap چیست</h1>
@@ -196,7 +197,60 @@
             </div>
         </div>
 
+    </div>
+<!--  Our team -->
+    <div class="container-fluid bg-light">
+        <h2 class="text-center pt-4">درباره ما / اعضای تیم</h2>
+        <div class="row row-cols-lg-3 row-cols-md-2 m-0">
+            <div class="col-lg">
+                <div class="card align-items-center border border-2 border-warning m-5 pt-5 pb-5 bg-secondary">
+                    <div class="card-header bg-light">سابقه: همراهی از ابتدای مسیر</div>
+
+                    <div class="card-body">
+                        <h2 class="card-title">جان اسنو</h2>
+                        <p class="card-text">مقاله نویس حوزه برنامه نویسی</p>
+                    </div>
+                    <img class="card-img-bottom" src="img/our_team1.jpg" alt="Card image" style="width:50%;height: 30%;">
+                    <div class="card-footer bg-warning">
+                        <a href="#" class="card-link link-underline link-underline-opacity-0 link-opacity-50-hover">مشاهده لینکدین</a>
+                        <a href="#" class="card-link link-underline link-underline-opacity-0 link-opacity-50-hover">مقالات نوشته شده</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg">
+                <div class="card align-items-center border border-2 border-warning m-5 pt-5 pb-5 bg-secondary">
+                    <div class="card-header bg-light">سابقه: همراهی از ابتدای مسیر</div>
+
+                    <div class="card-body">
+                        <h2 class="card-title">جان اسنو</h2>
+                        <p class="card-text">مقاله نویس حوزه برنامه نویسی</p>
+                    </div>
+                    <img class="card-img-bottom" src="img/our_team1.jpg" alt="Card image" style="width:50%;height: 30%;">
+                    <div class="card-footer bg-warning">
+                        <a href="#" class="card-link link-underline link-underline-opacity-0 link-opacity-50-hover">مشاهده لینکدین</a>
+                        <a href="#" class="card-link link-underline link-underline-opacity-0 link-opacity-50-hover">مقالات نوشته شده</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg">
+                <div class="card align-items-center border border-2 border-warning m-5 pt-5 pb-5 bg-secondary">
+                    <div class="card-header bg-light">سابقه: همراهی از ابتدای مسیر</div>
+
+                    <div class="card-body">
+                        <h2 class="card-title">جان اسنو</h2>
+                        <p class="card-text">مقاله نویس حوزه برنامه نویسی</p>
+                    </div>
+                    <img class="card-img-bottom" src="img/our_team1.jpg" alt="Card image" style="width:50%;height: 30%;">
+                    <div class="card-footer bg-warning">
+                        <a href="#" class="card-link link-underline link-underline-opacity-0 link-opacity-50-hover">مشاهده لینکدین</a>
+                        <a href="#" class="card-link link-underline link-underline-opacity-0 link-opacity-50-hover">مقالات نوشته شده</a>
+                    </div>
+                </div>
+            </div>
         </div>
+    </div>
 
 
     </div>
