--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#"> بلاگ ها </a>
+                            <a class="nav-link" href="#blog-posts"> بلاگ ها </a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#"> درباره ما </a>
+                            <a class="nav-link" href="#slideshow-back"> درباره ما </a>
                         </li>
 
                         <li class="nav-item">
@@ -77,7 +77,7 @@
 
 
         </header>
-
+        <!-- toolbar of blog -->
         <div class="container-lg pt-5 ">
             <div class="d-flex bg-light justify-content-between">
                 <div>
@@ -104,8 +104,8 @@
                 </div>
             </div>
         </div>
-
-        <div class="container-fluid">
+        <!-- Blog posts -->
+        <div class="container-fluid" id="blog-posts">
             <div class="row g-0 row-cols-lg-4 row-cols-md-3 m-3 justify-content-center">
 
                 <div class="col-lg mx-1 my-1  border border-info border-2 rounded-end rounded-3">
@@ -198,58 +198,103 @@
         </div>
 
     </div>
-<!--  Our team -->
-    <div class="container-fluid bg-light">
+    <!--  Our team -->
+    <div class="container-fluid bg-secondary">
         <h2 class="text-center pt-4">درباره ما / اعضای تیم</h2>
-        <div class="row row-cols-lg-3 row-cols-md-2 m-0">
-            <div class="col-lg">
-                <div class="card align-items-center border border-2 border-warning m-5 pt-5 pb-5 bg-secondary">
-                    <div class="card-header bg-light">سابقه: همراهی از ابتدای مسیر</div>
+        <div class="row row-cols-lg-3 row-cols-md-2 m-0 justify-content-center img-box">
+            <div id="slideshow-back"></div>
+            <!-- Carousel -->
+            <div id="demo" class="carousel slide" data-bs-ride="carousel">
+                <!-- Indicators/dots -->
+                <div class="carousel-indicators pt-1 mx-1 bg-dark">
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="col-lg">
+                            <div
+                                class="card align-items-center border border-2 border-warning m-5 pt-5 pb-5 bg-secondary">
+                                <div class="card-header bg-light">سابقه: همراهی از ابتدای مسیر</div>
 
-                    <div class="card-body">
-                        <h2 class="card-title">جان اسنو</h2>
-                        <p class="card-text">مقاله نویس حوزه برنامه نویسی</p>
+                                <div class="card-body">
+                                    <h2 class="card-title">جان اسنو</h2>
+                                    <p class="card-text">مقاله نویس حوزه برنامه نویسی</p>
+                                </div>
+                                <img class="card-img-bottom" src="img/our_team1.jpg" alt="Card image"
+                                    style="width:50%;height: 30%;">
+                                <div class="card-footer bg-warning">
+                                    <a href="#"
+                                        class="card-link link-underline link-underline-opacity-0 link-opacity-50-hover">مشاهده
+                                        لینکدین</a>
+                                    <a href="#"
+                                        class="card-link link-underline link-underline-opacity-0 link-opacity-50-hover">مقالات
+                                        نوشته شده</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <img class="card-img-bottom" src="img/our_team1.jpg" alt="Card image" style="width:50%;height: 30%;">
-                    <div class="card-footer bg-warning">
-                        <a href="#" class="card-link link-underline link-underline-opacity-0 link-opacity-50-hover">مشاهده لینکدین</a>
-                        <a href="#" class="card-link link-underline link-underline-opacity-0 link-opacity-50-hover">مقالات نوشته شده</a>
+                    <div class="carousel-item">
+                        <div class="col-lg">
+                            <div
+                                class="card align-items-center border border-2 border-warning m-5 pt-5 pb-5 bg-secondary">
+                                <div class="card-header bg-light">سابقه: همراهی از ابتدای مسیر</div>
+
+                                <div class="card-body">
+                                    <h2 class="card-title">جان اسنو</h2>
+                                    <p class="card-text">مقاله نویس حوزه برنامه نویسی</p>
+                                </div>
+                                <img class="card-img-bottom" src="img/our_team1.jpg" alt="Card image"
+                                    style="width:50%;height: 30%;">
+                                <div class="card-footer bg-warning">
+                                    <a href="#"
+                                        class="card-link link-underline link-underline-opacity-0 link-opacity-50-hover">مشاهده
+                                        لینکدین</a>
+                                    <a href="#"
+                                        class="card-link link-underline link-underline-opacity-0 link-opacity-50-hover">مقالات
+                                        نوشته شده</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                        <div class="col-lg">
+                            <div
+                                class="card align-items-center border border-2 border-warning m-5 pt-5 pb-5 bg-secondary">
+                                <div class="card-header bg-light">سابقه: همراهی از ابتدای مسیر</div>
+
+                                <div class="card-body">
+                                    <h2 class="card-title">جان اسنو</h2>
+                                    <p class="card-text">مقاله نویس حوزه برنامه نویسی</p>
+                                </div>
+                                <img class="card-img-bottom" src="img/our_team1.jpg" alt="Card image"
+                                    style="width:50%;height: 30%;">
+                                <div class="card-footer bg-warning">
+                                    <a href="#"
+                                        class="card-link link-underline link-underline-opacity-0 link-opacity-50-hover">مشاهده
+                                        لینکدین</a>
+                                    <a href="#"
+                                        class="card-link link-underline link-underline-opacity-0 link-opacity-50-hover">مقالات
+                                        نوشته شده</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </button>
             </div>
-
-            <div class="col-lg">
-                <div class="card align-items-center border border-2 border-warning m-5 pt-5 pb-5 bg-secondary">
-                    <div class="card-header bg-light">سابقه: همراهی از ابتدای مسیر</div>
-
-                    <div class="card-body">
-                        <h2 class="card-title">جان اسنو</h2>
-                        <p class="card-text">مقاله نویس حوزه برنامه نویسی</p>
-                    </div>
-                    <img class="card-img-bottom" src="img/our_team1.jpg" alt="Card image" style="width:50%;height: 30%;">
-                    <div class="card-footer bg-warning">
-                        <a href="#" class="card-link link-underline link-underline-opacity-0 link-opacity-50-hover">مشاهده لینکدین</a>
-                        <a href="#" class="card-link link-underline link-underline-opacity-0 link-opacity-50-hover">مقالات نوشته شده</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg">
-                <div class="card align-items-center border border-2 border-warning m-5 pt-5 pb-5 bg-secondary">
-                    <div class="card-header bg-light">سابقه: همراهی از ابتدای مسیر</div>
-
-                    <div class="card-body">
-                        <h2 class="card-title">جان اسنو</h2>
-                        <p class="card-text">مقاله نویس حوزه برنامه نویسی</p>
-                    </div>
-                    <img class="card-img-bottom" src="img/our_team1.jpg" alt="Card image" style="width:50%;height: 30%;">
-                    <div class="card-footer bg-warning">
-                        <a href="#" class="card-link link-underline link-underline-opacity-0 link-opacity-50-hover">مشاهده لینکدین</a>
-                        <a href="#" class="card-link link-underline link-underline-opacity-0 link-opacity-50-hover">مقالات نوشته شده</a>
-                    </div>
-                </div>
-            </div>
+            <!-- Left and right controls/icons -->
+            
         </div>
+
+    </div>
     </div>
 
 
