add some style to select menu and radio box

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div>
                     <form action="">
                         <label for="sorting" class="form-label">ترتیب نمایش</label>
-                        <select name="sorting" id="sorting">
+                        <select name="sorting" id="sorting" class="form-select-sm">
                             <option value="newest" selected="selected">جدیدترین ها</option>
                             <option value="oldest">قدیمی ترین ها</option>
                             <option value="popular">محبوب ترین ها</option>
@@ -94,7 +94,7 @@
                 <div>
                     <form action="">
                         <label for="category" class="form-label">دسته بندی</label>
-                        <select name="category" id="category">
+                        <select name="category" id="category" class="form-select-sm">
                             <option value="pub" selected="selected">همه موارد</option>
                             <option value="prg">برنامه نویسی</option>
                             <option value="devo">دواپس</option>
@@ -321,13 +321,13 @@
                 <div class="row row-cols-md-1 m-0">
                     <div class="col-md-6">
                         <div class="d-flex flex-column flex-lg-row m-lg-5 p-lg-5">
-                            <fieldset class="m-lg-5">
+                            <fieldset class="m-lg-5 bg-light">
                                 <legend> موضوع پیام</legend>
-                                <input type="radio" id="offer" name="subject" value=" انتقاد و پیشنهاد">
+                                <input type="radio" id="offer" class="form-check-input" name="subject" value=" انتقاد و پیشنهاد">
                                 <label for="offer">انتقاد و پیشنهاد</label>
-                                <input type="radio" id="work" name="subject" value=" همکاری">
+                                <input type="radio" id="work" class="form-check-input" name="subject" value=" همکاری">
                                 <label for="work">همکاری</label>
-                                <input type="radio" id="other" name="subject" value=" سایر موارد">
+                                <input type="radio" id="other" class="form-check-input" name="subject" value=" سایر موارد">
                                 <label for="other">سایر موارد</label>
                             </fieldset>
                         </div>
