--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 
                     </div>
 
-                    <div class="col-md">
+                    <div class="col-md mb-5">
                         <div class="d-flex flex-column flex-lg-row justify-content-center">
                             <label for="email" class="m-2">ایمیل</label>
                             <input type="email" class="form-control" id="email" placeholder="example@hostname.com"
